--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "beyondcode/laravel-websockets": "^1.13",
+        "doctrine/dbal": "^3.4",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "intervention/imagecache": "^2.5",
@@ -17,6 +18,8 @@
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~5.0",
         "react/event-loop": "^1.3.0",
+        "spatie/cpu-load-health-check": "^1.0",
+        "spatie/laravel-health": "^1.14",
         "spatie/laravel-webhook-server": "^3.1"
     },
     "require-dev": {
