--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,23 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "beyondcode/laravel-websockets": "^1.13",
-        "doctrine/dbal": "^3.4",
+        "php": "^8.1",
+        "beyondcode/laravel-websockets": "^1.14",
+        "evilfreelancer/routeros-api-php": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
+        "inertiajs/inertia-laravel": "^0.6.8",
+        "laravel/framework": "^10.0",
+        "laravel/horizon": "^5.15",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.8",
+        "miyahan/telnet": "^1.1",
+        "phpseclib/phpseclib": "^3.0",
+        "predis/predis": "^2.1",
+        "pusher/pusher-php-server": "~7.0",
+        "tightenco/ziggy": "^1.0",
+        "doctrine/dbal": "^3.0",
         "intervention/image": "^2.7",
         "intervention/imagecache": "^2.5",
-        "laravel/framework": "^9.11",
-        "laravel/horizon": "^5.9",
-        "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7",
-        "predis/predis": "^1.1",
-        "pusher/pusher-php-server": "~5.0",
         "react/event-loop": "^1.3.0",
         "slexx/server": "^1.0",
         "spatie/cpu-load-health-check": "^1.0",
@@ -31,10 +36,10 @@
         "laravel/sail": "^1.0.1",
         "laravel/telescope": "^4.9",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
         "spatie/laravel-cronless-schedule": "^1.1",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -73,6 +78,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
