--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,12 @@
     "require": {
         "php": "^8.1",
         "beyondcode/laravel-websockets": "^1.14",
+        "doctrine/dbal": "^3.0",
         "evilfreelancer/routeros-api-php": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
+        "intervention/image": "^2.7",
+        "intervention/imagecache": "^2.5",
         "laravel/framework": "^10.0",
         "laravel/horizon": "^5.15",
         "laravel/sanctum": "^3.2",
@@ -18,17 +21,15 @@
         "phpseclib/phpseclib": "^3.0",
         "predis/predis": "^2.1",
         "pusher/pusher-php-server": "~7.0",
-        "tightenco/ziggy": "^1.0",
-        "doctrine/dbal": "^3.0",
-        "intervention/image": "^2.7",
-        "intervention/imagecache": "^2.5",
         "react/event-loop": "^1.3.0",
         "slexx/server": "^1.0",
         "spatie/cpu-load-health-check": "^1.0",
         "spatie/image": "^2.2",
         "spatie/laravel-health": "^1.14",
+        "spatie/laravel-ignition": "^2.1",
         "spatie/laravel-slack-alerts": "^1.1",
-        "spatie/laravel-webhook-server": "^3.1"
+        "spatie/laravel-webhook-server": "^3.1",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -38,8 +39,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
-        "spatie/laravel-cronless-schedule": "^1.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-cronless-schedule": "^1.1"
     },
     "autoload": {
         "psr-4": {
